fix examples, remove predefined z-index for draggable class

--- a/less/draggable.less
+++ b/less/draggable.less
@@ -7,7 +7,6 @@
 
 .draggable {
     animation: drag-flush 1s ease infinite;
-    z-index: @zindex-top - 1!important;
 }
 
 
